2002-10-23  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Class/ClassTest.java: fix subtest #2
	for Class.getClassLoader() to check for JDK 1.3/1.4 behaviour

2002-10-21  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Class/reflect2.java: Completed tests for
	inner class introspection methods.  (No testing of security yet)
	* gnu/testlet/java/lang/Class/reflect.java: ditto
	* gnu/testlet/java/lang/Class/rf2_help.java: ditto
	* gnu/testlet/java/lang/Class/rf_help.java: ditto

2002-10-20  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Class/ClassTest.java: Rejigged to use
	'harness.check(...)' rather than 'if (!...) { harness.fail(...) }
	* gnu/testlet/java/lang/Class/reflect.java: Cosmetic tidyups.

2002-10-19  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/lang/Class/reflect2.java: New test for the
	inner class reflection methods.
	* gnu/testlet/java/lang/Class/rf2_help.java: Helper for above test.
	* gnu/testlet/java/lang/Class/ClassTest.java: Tidied up some error
	reporting and indentation

2002-10-18  Mark Wielaard  <mark@klomp.org>
	* gnu/testlet/java/net/URL/URLTestjava: change "sourceware.cygnus.com"
	to "sources.redhat.com".

2002-10-16  Daryl Lee <dol@sources.redhat.com>

	* gnu/testlet/java/io/LineNumberReader/Test.java: completed
	remaining method tests

2002-10-16  Daryl Lee <dol@sources.redhat.com>

	* the following four files complete remaining methods for
	java.io.DataInputStream and java.io.DataOutputStream (JDK 1.1)
	* gnu/testlet/java/io/DataOutputStream/WriteRead2.java
	* gnu/testlet/java/io/DataInputStream/ReadStream2.java
	* gnu/testlet/java/io/DataInputStream/ReadReference22.java
	* gnu/testlet/java/io/DataInputStream/reference2.data

2002-10-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/security/Security/provider.java: Preference
	positions are 1 based.

2002-10-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/security/Provider/NameVersionInfo.java: New test.